--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
   }
   
   :root {
-    --color-primary: #191d2b;
-    --color-secondary: #27AE60;
+    --color-primary: #3D405B ;
+    --color-secondary: #81B29A;
     --color-white: #FFFFFF;
     --color-black: #000;
     --color-grey0: #f8f8f8;
@@ -36,7 +36,7 @@
   }
   
   body {
-    background-color: var(--color-primary);
+    background-color:F4F1DE;
     font-family: "Poppins", sans-serif;
     font-size: 1.1rem;
     color: var(--color-white);
